--- a/worker/Jenkinsfile
+++ b/worker/Jenkinsfile
@@ -7,31 +7,43 @@ pipeline {
   }
 
   stages{
-      stage("build"){
-          steps{
-              echo 'Compiling worker app..'
-              dir('worker'){
-                sh 'mvn compile'
-              }
+      stage(one){
+        when{
+            changeset "**/worker/**"
           }
+
+        steps{
+          echo 'Compiling worker app..'
+          dir('worker'){
+            sh 'mvn compile'
+          }
+        }
       }
-      stage("test"){
-          steps{
-              echo 'Running Unit Tets on worker app..'
-              dir('worker'){
-                sh 'mvn clean test'
-              }
+      stage(two){
+        when{
+          changeset "**/worker/**"
+        }
+        steps{
+          echo 'Running Unit Tets on worker app..'
+          dir('worker'){
+            sh 'mvn clean test'
+           }
 
           }
       }
-      stage("package"){
-          steps{
-              echo 'Packaging worker app'
-              dir('worker'){
-                sh 'mvn package'
-              }
-
+      stage(three){
+        when{
+          branch 'master'
+          changeset "**/worker/**"
+        }
+        steps{
+          echo 'Packaging worker app'
+          dir('worker'){
+            sh 'mvn package -DskipTests'
+            archiveArtifacts artifacts: '**/target/*.jar', fingerprint: true
           }
+
+        }
       }
   }
 
@@ -41,4 +53,3 @@ pipeline {
     }
   }
 }
-
