fixed step names

--- a/worker/Jenkinsfile
+++ b/worker/Jenkinsfile
@@ -7,48 +7,37 @@ pipeline {
   }
 
   stages{
-      stage(one){
-        when{
-            changeset "**/worker/**"
+      stage("build"){
+          steps{
+              echo 'Compiling worker app..'
+              dir('worker'){
+                sh 'mvn compile'
+              }
           }
-
-        steps{
-          echo 'Compiling worker app..'
-          dir('worker'){
-            sh 'mvn compile'
-          }
-        }
       }
-      stage(two){
-        when{
-          changeset "**/worker/**"
-        }
-        steps{
-          echo 'Running Unit Tets on worker app..'
-          dir('worker'){
-            sh 'mvn clean test'
-           }
+      stage("test"){
+          steps{
+              echo 'Running Unit Tets on worker app..'
+              dir('worker'){
+                sh 'mvn clean test'
+              }
 
           }
       }
-      stage(three){
-        when{
-          branch 'master'
-          changeset "**/worker/**"
-        }
-        steps{
-          echo 'Packaging worker app'
-          dir('worker'){
-            sh 'mvn package -DskipTests'
-            archiveArtifacts artifacts: '**/target/*.jar', fingerprint: true
-          }
+      stage("package"){
+          steps{
+              echo 'Packaging worker app'
+              dir('worker'){
+                sh 'mvn package -DskipTests'
+              }
 
-        }
+          }
       }
   }
 
   post{
     always{
+        archiveArtifacts artifacts: '**/target/*.jar', fingerprint: true
         echo 'Building multibranch pipeline for worker is completed..'
     }
   }
