--- a/result/package.json
+++ b/result/package.json
@@ -17,6 +17,9 @@
     "pg": "^4.4.3",
     "socket.io": "^1.3.7"
   },
+  "scripts": {
+  "test": "mocha"
+  },
   "devDependencies": {
     "chai": "^4.0.2",
     "mocha": "^3.4.2"
