--- a/result/Jenkinsfile
+++ b/result/Jenkinsfile
@@ -1,10 +1,11 @@
 pipeline {
-  agent any
 
-  tools{
-    nodejs 'NodeJS 8.9.0'
-
+  agent{
+    docker{
+      image 'node:8.16.0-alpine'
+    }
   }
+
 
   stages{
       stage(build){
