per stage docker agent config

--- a/worker/Jenkinsfile
+++ b/worker/Jenkinsfile
@@ -1,16 +1,19 @@
 pipeline {
-  agent{
-    docker{
-      image 'maven:3.6.1-jdk-8-slim'
-      args '-v $HOME/.m2:/root/.m2'
-    }
-  }
+
+  agent none
 
   stages{
       stage("build"){
         when{
             changeset "**/worker/**"
           }
+
+        agent{
+          docker{
+            image 'maven:3.6.1-jdk-8-slim'
+            args '-v $HOME/.m2:/root/.m2'
+          }
+        }
 
         steps{
           echo 'Compiling worker app..'
@@ -22,6 +25,12 @@ pipeline {
       stage("test"){
         when{
           changeset "**/worker/**"
+        }
+        agent{
+          docker{
+            image 'maven:3.6.1-jdk-8-slim'
+            args '-v $HOME/.m2:/root/.m2'
+          }
         }
         steps{
           echo 'Running Unit Tets on worker app..'
@@ -35,6 +44,12 @@ pipeline {
         when{
           branch 'master'
           changeset "**/worker/**"
+        }
+        agent{
+          docker{
+            image 'maven:3.6.1-jdk-8-slim'
+            args '-v $HOME/.m2:/root/.m2'
+          }
         }
         steps{
           echo 'Packaging worker app'
