--- a/worker/Jenkinsfile
+++ b/worker/Jenkinsfile
@@ -63,12 +63,17 @@ pipeline {
 
       stage('docker-package'){
           agent any
+          when{
+            changeset "**/worker/**"
+            branch 'master'
+          }
           steps{
             echo 'Packaging worker app with docker'
             script{
               docker.withRegistry('https://index.docker.io/v1/', 'dockerlogin') {
                   def workerImage = docker.build("initcron/worker:v${env.BUILD_ID}", "./worker")
                   workerImage.push()
+                  workerImage.push("${env.BRANCH_NAME}")
                   workerImage.push("latest")
               }
             }
