--- a/vote/Jenkinsfile
+++ b/vote/Jenkinsfile
@@ -1,17 +1,17 @@
 pipeline {
 
-  agent{
-    docker{
-      image 'python:2.7.16-slim'
-      args '--user root'
-    }
-  }
-
+  agent none
 
   stages{
       stage(build){
         when{
             changeset "**/vote/**"
+          }
+          agent{
+            docker{
+              image 'python:2.7.16-slim'
+              args '--user root'
+            }
           }
 
         steps{
@@ -25,6 +25,12 @@ pipeline {
         when{
           changeset "**/vote/**"
         }
+        agent{
+          docker{
+            image 'python:2.7.16-slim'
+            args '--user root'
+          }
+        }
         steps{
           echo 'Running Unit Tets on vote app..'
           dir('vote'){
@@ -33,6 +39,26 @@ pipeline {
 
           }
       }
+
+      stage('docker-package'){
+          agent any
+          when{
+            changeset "**/vote/**"
+            branch 'master'
+          }
+          steps{
+            echo 'Packaging vote app with docker'
+            script{
+              docker.withRegistry('https://index.docker.io/v1/', 'dockerlogin') {
+                  def voteImage = docker.build("initcron/vote:v${env.BUILD_ID}", "./vote")
+                  voteImage.push()
+                  voteImage.push("${env.BRANCH_NAME}")
+                  voteImage.push("latest")
+              }
+            }
+          }
+      }
+
   }
 
 }
