--- a/result/Jenkinsfile
+++ b/result/Jenkinsfile
@@ -1,16 +1,16 @@
 pipeline {
 
-  agent{
-    docker{
-      image 'node:8.16.0-alpine'
-    }
-  }
-
+  agent none
 
   stages{
       stage(build){
         when{
             changeset "**/result/**"
+          }
+          agent{
+            docker{
+              image 'node:8.16.0-alpine'
+            }
           }
 
         steps{
@@ -24,6 +24,11 @@ pipeline {
         when{
           changeset "**/result/**"
         }
+        agent{
+          docker{
+            image 'node:8.16.0-alpine'
+          }
+        }
         steps{
           echo 'Running Unit Tets on result app..'
           dir('result'){
@@ -33,6 +38,25 @@ pipeline {
 
           }
       }
+      stage('docker-package'){
+          agent any
+          when{
+            changeset "**/result/**"
+            branch 'master'
+          }
+          steps{
+            echo 'Packaging result app with docker'
+            script{
+              docker.withRegistry('https://index.docker.io/v1/', 'dockerlogin') {
+                  def resultImage = docker.build("initcron/result:v${env.BUILD_ID}", "./result")
+                  resultImage.push()
+                  resultImage.push("${env.BRANCH_NAME}")
+                  resultImage.push("latest")
+              }
+            }
+          }
+      }
+
   }
 
 }
