--- a/vote/Jenkinsfile
+++ b/vote/Jenkinsfile
@@ -34,7 +34,8 @@ pipeline {
         steps{
           echo 'Running Unit Tets on vote app..'
           dir('vote'){
-             sh 'nosetests -v'
+           sh 'pip install -r requirements.txt'
+           sh 'nosetests -v'
            }
 
           }
