--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,5 @@
-sonar.projectKey=instavoteaio
+sonar.organization=gshah-org
+sonar.projectKey=gshah-org_example-voting-app
 sonar.projectName=Instavote AIO
 sonar.projectVersion=1.0 
 # Comma-separated paths to directories with sources (required) 
