--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,8 +2,8 @@ sonar.organization=gshah-org
 sonar.projectKey=gshah-org_example-voting-app
 sonar.projectName=Instavote AIO
 sonar.projectVersion=1.0
-# Comma-separated paths to directories with sources (required) 
-sonar.sources=vote,worker/src/main
+# Comma-separated paths to directories with sources (required)
+sonar.sources=worker
 # Encoding of the source files
 sonar.sourceEncoding=UTF-8
 sonar.java.binaries=.
