--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,8 +1,9 @@
+sonar.organization=YourGitOrg
 sonar.projectKey=instavoteaio
 sonar.projectName=Instavote AIO
 sonar.projectVersion=1.0 
 # Comma-separated paths to directories with sources (required) 
-sonar.sources=.
+sonar.sources=worker
 # Encoding of the source files 
 sonar.sourceEncoding=UTF-8
 sonar.java.binaries=.
